basalt/src/snapshots/basalt_tui__explorer__tests__render_entries.snap
---
source: basalt/src/explorer.rs
expression: terminal.backend()
---
"┏ Test ━━━━━━━━━━━━━━━━ ↓𝌆 ◀ ┓"
"┃                            ┃"
"┃                            ┃"
"┃                            ┃"
"┃                            ┃"
"┃                            ┃"
"┃                            ┃"
"┃                            ┃"
"┃                            ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
